--- a/Intents2/app/src/main/AndroidManifest.xml
+++ b/Intents2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dicesrolls" >
+    package="com.example.intents">
 
     <application
         android:allowBackup="true"
@@ -8,24 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DicesRolls" >
-
+        android:theme="@style/Theme.Intents">
         <activity
-            android:name=".RollsActivity"
+            android:name=".TerceiraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SegundaActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
